force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/BMCServiceDesk__SRM_RequestDefinition__c.object-meta.xml
<CustomObject>
    <description>Stores the service request definitions created by a system administrator.</description>
    <label>Request Definition</label>
    <nameField>
        <label>Request Definition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>