force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__AllAccount_ConsoleConfiguration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AllAccount_ConsoleConfiguration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All Accounts (Remedyforce Console)</label>
    <type>Checkbox</type>
</CustomField>