force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__AllAccounts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AllAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Accounts</label>
    <type>Checkbox</type>
</CustomField>