force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__CurrencyType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CurrencyType__c</fullName>
    <label>Currency Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>