force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CurrentDate__c</fullName>
    <formula>NOW()</formula>
    <label>CurrentDate</label>
    <type>DateTime</type>
</CustomField>