force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__CustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CustomerPrice__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>