force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__DeliveryCost__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeliveryCost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>