force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__FKBusinessService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Request Definitions</relationshipLabel>
    <relationshipName>Request_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>