force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipLabel>Request Definitions</relationshipLabel>
    <relationshipName>Request_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>