force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__FKContentImport__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKContentImport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
    <label>Content Import</label>
    <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
    <relationshipLabel>Request Definitions</relationshipLabel>
    <relationshipName>Request_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>