force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__FKLookupFilter__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKLookupFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Filter</label>
    <referenceTo>BMCServiceDesk__LookupFilter__c</referenceTo>
    <relationshipLabel>Request Definitions</relationshipLabel>
    <relationshipName>Request_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>