force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Image__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Image__c</fullName>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>