force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Mobile__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box to make the service request available on Mobile App.</inlineHelpText>
    <label>Show in Remedyforce Mobile</label>
    <type>Checkbox</type>
</CustomField>