force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Online__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Online__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box to make the service request available in Self Service.</inlineHelpText>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>