force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Prefix_Prompt_to_user_input__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Prefix_Prompt_to_user_input__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box to prefix the Prompt/Question to user input mapped to Text Area or Long Text Area output fields.</inlineHelpText>
    <label>Prefix the Prompt/Question to user input</label>
    <type>Checkbox</type>
</CustomField>