force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Profile_ConsoleConfiguration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Profile_ConsoleConfiguration__c</fullName>
    <defaultValue>&quot;ALL&quot;</defaultValue>
    <label>Profile(Remedyforce Console)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>