force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Profiles__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Profiles__c</fullName>
    <label>Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>