force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__ProvideInformation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProvideInformation__c</fullName>
    <inlineHelpText>Provide Information</inlineHelpText>
    <label>Provide Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>