force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Restrict_SR_Access__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Restrict_SR_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value in this field indicates whether service request restrictions are applied to users who do not have the entitlement for underlying SRDs</description>
    <label>Restrict Service Request Access</label>
    <type>Checkbox</type>
</CustomField>