force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__ReviewService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ReviewService__c</fullName>
    <label>Review a Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>