force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__serviceRequestTitle__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__serviceRequestTitle__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>