force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__Set_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Set_Execution_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Execution Order</label>
    <type>Checkbox</type>
</CustomField>