force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__SRDUrl__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SRDUrl__c</fullName>
    <inlineHelpText>Use this field to enter a URL that provides more information</inlineHelpText>
    <label>URL for More Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>