force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__TurnaroundTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TurnaroundTime__c</fullName>
    <label>Turnaround Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>