force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__User_Instructions_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__User_Instructions_Rich_Text__c</fullName>
    <description>Stores user instructions in rich text.</description>
    <inlineHelpText>Enter instructions for users in rich text.</inlineHelpText>
    <label>Rich Text User Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>