force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/fields/BMCServiceDesk__ViewRequest__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ViewRequest__c</fullName>
    <label>View a Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>