force-app/main/default/objects/BMCServiceDesk__SRM_RequestDefinition__c/validationRules/BMCServiceDesk__endDateMustBeAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__endDateMustBeAfterStartDate</fullName>
    <active>true</active>
    <description>End date must come after Start Date</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndDate__c),ISBLANK(BMCServiceDesk__EndDate__c) ) ), BMCServiceDesk__EndDate__c &lt; BMCServiceDesk__StartDate__c  )</errorConditionFormula>
    <errorMessage>The End Date must be later than the Start Date</errorMessage>
</ValidationRule>